{
  "version": 4,
  "terraform_version": "1.12.1",
  "serial": 50,
  "lineage": "1491bc5a-f2df-bc8a-2d77-a4ecba2c65e7",
  "resources": [
    {
      "module": "module.blog_alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:669701389554:loadbalancer/app/blog-alb/5a8056f15333c2c7",
            "arn_suffix": "app/blog-alb/5a8056f15333c2c7",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "blog-alb-933670184.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:669701389554:loadbalancer/app/blog-alb/5a8056f15333c2c7",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "blog-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0542911ef42b53d29"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04f76ae1eaad94d25"
              },
              {
                "subnet_id": "subnet-07cf372d2a5280b76"
              },
              {
                "subnet_id": "subnet-0cd03329b863ce770"
              }
            ],
            "subnets": [
              "subnet-04f76ae1eaad94d25",
              "subnet-07cf372d2a5280b76",
              "subnet-0cd03329b863ce770"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "blog-alb"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "blog-alb"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_id": "vpc-007d8e54b95168c69",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.blog_sg.aws_security_group.this",
            "module.blog_sg.aws_security_group.this_name_prefix",
            "module.blog_vpc.aws_subnet.public",
            "module.blog_vpc.aws_vpc.this",
            "module.blog_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.blog_alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend_http_tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:669701389554:listener/app/blog-alb/5a8056f15333c2c7/b33d690e1537840d",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:669701389554:targetgroup/blog-20250525205829985800000002/fc99008df0de62d5",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:669701389554:listener/app/blog-alb/5a8056f15333c2c7/b33d690e1537840d",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:669701389554:loadbalancer/app/blog-alb/5a8056f15333c2c7",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {
              "Environment": "dev"
            },
            "tags_all": {
              "Environment": "dev"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.blog_alb.aws_lb.this",
            "module.blog_alb.aws_lb_target_group.main",
            "module.blog_sg.aws_security_group.this",
            "module.blog_sg.aws_security_group.this_name_prefix",
            "module.blog_vpc.aws_subnet.public",
            "module.blog_vpc.aws_vpc.this",
            "module.blog_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.blog_alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:669701389554:targetgroup/blog-20250525205829985800000002/fc99008df0de62d5",
            "arn_suffix": "targetgroup/blog-20250525205829985800000002/fc99008df0de62d5",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:669701389554:targetgroup/blog-20250525205829985800000002/fc99008df0de62d5",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "blog-20250525205829985800000002",
            "name_prefix": "blog-",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "blog-"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "blog-"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-007d8e54b95168c69"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.blog_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.blog_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:669701389554:security-group/sg-0542911ef42b53d29",
            "description": "Security Group managed by Terraform",
            "egress": [],
            "id": "sg-0542911ef42b53d29",
            "ingress": [],
            "name": "blog-20250525205829984200000001",
            "name_prefix": "blog-",
            "owner_id": "669701389554",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "blog"
            },
            "tags_all": {
              "Name": "blog"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-007d8e54b95168c69"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.blog_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.blog_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-3761855402",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0542911ef42b53d29",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": -1,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.blog_sg.aws_security_group.this",
            "module.blog_sg.aws_security_group.this_name_prefix",
            "module.blog_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.blog_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTPS",
            "from_port": 443,
            "id": "sgrule-1780405617",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0542911ef42b53d29",
            "security_group_rule_id": "sgr-04b0c483c5917d033",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.blog_sg.aws_security_group.this",
            "module.blog_sg.aws_security_group.this_name_prefix",
            "module.blog_vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTP",
            "from_port": 80,
            "id": "sgrule-2929220526",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0542911ef42b53d29",
            "security_group_rule_id": "sgr-095d1815346d82f70",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.blog_sg.aws_security_group.this",
            "module.blog_sg.aws_security_group.this_name_prefix",
            "module.blog_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.blog_vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:669701389554:network-acl/acl-05eb3f83c52f08757",
            "default_network_acl_id": "acl-05eb3f83c52f08757",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-05eb3f83c52f08757",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "669701389554",
            "subnet_ids": [
              "subnet-04f76ae1eaad94d25",
              "subnet-07cf372d2a5280b76",
              "subnet-0cd03329b863ce770"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "dev-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-default",
              "Terraform": "true"
            },
            "vpc_id": "vpc-007d8e54b95168c69"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.blog_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.blog_vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:669701389554:route-table/rtb-08043e5181f18f5c9",
            "default_route_table_id": "rtb-08043e5181f18f5c9",
            "id": "rtb-08043e5181f18f5c9",
            "owner_id": "669701389554",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "dev-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-default",
              "Terraform": "true"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-007d8e54b95168c69"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.blog_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.blog_vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:669701389554:security-group/sg-0a9166cd8e47a7336",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0a9166cd8e47a7336",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "669701389554",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "dev-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-default",
              "Terraform": "true"
            },
            "vpc_id": "vpc-007d8e54b95168c69"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.blog_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.blog_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:669701389554:internet-gateway/igw-01d76190e4bfb41f8",
            "id": "igw-01d76190e4bfb41f8",
            "owner_id": "669701389554",
            "tags": {
              "Environment": "dev",
              "Name": "dev",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev",
              "Terraform": "true"
            },
            "vpc_id": "vpc-007d8e54b95168c69"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.blog_vpc.aws_vpc.this",
            "module.blog_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.blog_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-01d76190e4bfb41f8",
            "id": "r-rtb-028ff1dbce6c5be6e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-028ff1dbce6c5be6e",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.blog_vpc.aws_internet_gateway.this",
            "module.blog_vpc.aws_route_table.public",
            "module.blog_vpc.aws_vpc.this",
            "module.blog_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.blog_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:669701389554:route-table/rtb-028ff1dbce6c5be6e",
            "id": "rtb-028ff1dbce6c5be6e",
            "owner_id": "669701389554",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01d76190e4bfb41f8",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "dev-public",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-public",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-007d8e54b95168c69"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.blog_vpc.aws_vpc.this",
            "module.blog_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.blog_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b26f73074ae9a76a",
            "route_table_id": "rtb-028ff1dbce6c5be6e",
            "subnet_id": "subnet-04f76ae1eaad94d25"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.blog_vpc.aws_route_table.public",
            "module.blog_vpc.aws_subnet.public",
            "module.blog_vpc.aws_vpc.this",
            "module.blog_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a5320e9178e53b83",
            "route_table_id": "rtb-028ff1dbce6c5be6e",
            "subnet_id": "subnet-0cd03329b863ce770"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.blog_vpc.aws_route_table.public",
            "module.blog_vpc.aws_subnet.public",
            "module.blog_vpc.aws_vpc.this",
            "module.blog_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0915fa9f518d0933a",
            "route_table_id": "rtb-028ff1dbce6c5be6e",
            "subnet_id": "subnet-07cf372d2a5280b76"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.blog_vpc.aws_route_table.public",
            "module.blog_vpc.aws_subnet.public",
            "module.blog_vpc.aws_vpc.this",
            "module.blog_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.blog_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:669701389554:subnet/subnet-04f76ae1eaad94d25",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04f76ae1eaad94d25",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "669701389554",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "dev-public-us-west-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-public-us-west-2a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-007d8e54b95168c69"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.blog_vpc.aws_vpc.this",
            "module.blog_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:669701389554:subnet/subnet-0cd03329b863ce770",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cd03329b863ce770",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "669701389554",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "dev-public-us-west-2b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-public-us-west-2b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-007d8e54b95168c69"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.blog_vpc.aws_vpc.this",
            "module.blog_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:669701389554:subnet/subnet-07cf372d2a5280b76",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07cf372d2a5280b76",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "669701389554",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "dev-public-us-west-2c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-public-us-west-2c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-007d8e54b95168c69"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.blog_vpc.aws_vpc.this",
            "module.blog_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.blog_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:669701389554:vpc/vpc-007d8e54b95168c69",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05eb3f83c52f08757",
            "default_route_table_id": "rtb-08043e5181f18f5c9",
            "default_security_group_id": "sg-0a9166cd8e47a7336",
            "dhcp_options_id": "dopt-a25ff7da",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-007d8e54b95168c69",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08043e5181f18f5c9",
            "owner_id": "669701389554",
            "tags": {
              "Environment": "dev",
              "Name": "dev",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev",
              "Terraform": "true"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}